程式碼上傳練習

--- a/lesson1/lesson1.ipynb
+++ b/lesson1/lesson1.ipynb
@@ -23,6 +23,34 @@
    "source": [
     "print(\"第一次練習\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'python\\n n=5\\n n+10\\n print(n)\\n\\n #========output====\\n15\\n\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''python\n",
+    " n=5\n",
+    " n+10\n",
+    " print(n)\n",
+    "\n",
+    " #========output====\n",
+    "15\n",
+    "\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
