--- a/lesson1/作業/作業1.md
+++ b/lesson1/作業/作業1.md
@@ -14,6 +14,26 @@
 
 可以在**评论**字段和 .md 文件中以**粗体**、*斜体*、~~删除线~~、<sub>下标</sub>或<sup>上标</sup>文本表示强调。
 
+加粗： 樣式 **這是粗體** 或 __加粗樣式__
+
+( 在window的快捷鍵使用 Ctrl + B 按鍵快速使用 )
+
+斜體： *這是斜體* 或 _斜體樣式_
+
+( 在window的快捷鍵使用 Ctrl + I 按鍵快速使用 )
+
+
+刪除線： ~~這是刪除線~~
+
+全部粗和斜：***全部加粗變斜***
+
+上標 <sup>這是上標</sup>
+
+下標 <sub>這是下標</sub>
+
+下標線 <ins>這是下標線</ins>
+
+sample:This is an <ins>underlined</ins> text
 
 # 標注
 使用'單反引號' 可標注句子中的代碼或'命令'.反引號中的文本不會被格式化.
