--- a/lesson1/作業/作業2.md
+++ b/lesson1/作業/作業2.md
@@ -1,10 +1,119 @@
-# 文字樣式
+文本样式
+可以在评论字段和 .md 文件中以粗体、斜体、删除线、下标或上标文本表示强调。
 
-可以在**评论**字段和 .md 文件中以**粗体**、*斜体*、~~删除线~~、<sub>下标</sub>或<sup>上标</sup>文本表示强调。
+# 引用代碼
 
-# 表格
+使用单反引号可标注句子中的代码或命令。 反引号中的文本不会被格式化。 你也可以按 Command+E (Mac) 或 Ctrl+E (Windows/Linux) 键盘快捷方式将代码块的反引号插入到 Markdown 一行中
 
-|欄位1|欄位2|欄位3|
-|----|-----|-----|
-|內容1|內容2|內容3|
-|內容4|內容5|內容6|
+sample:
+
+Use `git status` to list all new or modified files that haven't yet been committed.
+
+
+要将代码或文本格式化为各自的不同块，请使用三反引号。
+
+sample:
+
+Some basic Git commands are:
+```
+git status
+git add
+git commit
+```
+
+
+
+# 引用文本
+
+可以使用>來引用文本
+
+Text that is not a quote
+> Text that is a quote
+
+引用文本在右侧索引，带有一个垂直线，并使用灰色字体显示。
+
+查看对话时，可以通过突出显示文本，然后键入 R 来自动引用评论中的文本。可以通过依次单击  和“引用回复”来引用整条评论。 有关键盘快捷方式的详细信息，请参阅“键盘快捷方式”。
+
+# 支援的顏色模型
+
+在问题、拉取请求和讨论中，可以使用反引号在句子中标注颜色。 反引号内支持的颜色模型将显示颜色的可视化效果。
+
+sample:
+The background color is `#ffffff` for light mode and `#000000` for dark mode.
+
+顏色模式表示方式
+
+Color ：  HEX | 語法:	`#RRGGBB`   | 範例：`#0969DA`
+Color ：  RGB | 語法:	`rgb(R,G,B)`| 範例：`rgb(9, 105, 218)`
+Color ：  HSL | 語法:	`hsl(H,S,L)`| 範例：`hsl(212, 92%, 45%)`
+
+
+支持的颜色模型在反引号内不能有任何前导或尾随空格。
+颜色的可视化效果仅在问题、拉取请求和讨论中受支持。
+
+# 鏈結
+
+通过将链接文本用方括号 [ ] 括起来，然后将 URL 用括号 ( ) 括起来，可创建内联链接。 还可以使用键盘快捷方式 Command+K 创建链接。 选择文本后，可以粘贴剪贴板中的 URL 以自动从所选内容创建链接。
+
+还可以通过突出显示文本并使用键盘快捷方式 Command+V 创建 Markdown 超链接。 如果要将文本替换为链接，请使用键盘快捷方式 Command+Shift+V。
+
+This site was built using [GitHub Pages](https://pages.github.com/).
+
+当评论中写入了有效 URL 时，GitHub 会自动创建链接。 有关详细信息，请参阅“自动链接引用和 URL”。
+
+
+# 章節鏈結
+
+可以直接链接到具有标题的任何章节。 若要查看呈现文件中自动生成的定位点，请将鼠标悬停在章节标题上方以显示  图标，然后单击图标以在浏览器中显示定位点。
+
+如果需要确定要编辑的文件中标题的定位点，可使用以下基本规则：
+
+字母转换成小写形式。
+空格由连字符 (-) 代替。 任何其他空格或标点符号都将被删除。
+前导和尾随空格被删除。
+标记格式被删除，只保留内容（例如，_italics_ 变为 italics）。
+如果标题的自动生成的定位点与同一文档中的早期定位点相同，那么通过追加连字符和自动递增整数来生成唯一标识符。
+有关 URI 片段要求的详细信息，请参阅 RFC 3986：统一资源标识符 (URI)：通用语法，第 3.5 节。
+
+下面的代码块演示了用于从呈现内容中的标题生成定位点的基本规则。
+
+如果编辑标题，或者更改具有“相同”定位点的标题的顺序，则还需要更新指向这些标题的任何链接，因为定位点将发生变化。
+
+sample:
+# Example headings
+
+## Sample Section
+
+## This'll be a _Helpful_ Section About the Greek Letter Θ!
+A heading containing characters not allowed in fragments, UTF-8 characters, two consecutive spaces between the first and second words, and formatting.
+
+## This heading is not unique in the file
+
+TEXT 1
+
+## This heading is not unique in the file
+
+TEXT 2
+
+# Links to the example headings above
+
+Link to the sample section: [Link Text](#sample-section).
+
+Link to the helpful section: [Link Text](#thisll-be-a-helpful-section-about-the-greek-letter-Θ).
+
+Link to the first non-unique section: [Link Text](#this-heading-is-not-unique-in-the-file).
+
+Link to the second non-unique section: [Link Text](#this-heading-is-not-unique-in-the-file-1).
+
+# relative links (相对链接)
+
+您可以在渲染的文件中定义相对链接和图像路径，以帮助读者导航到仓库中的其他文件。
+
+相对链接是相对于当前文件的链接。 例如，如果在仓库根目录下有一个自述文件，而在 docs/CONTRIBUTING.md 中有另一个文件，则自述文件中的 CONTRIBUTING.md 的相关链接如下所示 ：
+
+[Contribution guidelines for this project](docs/CONTRIBUTING.md)
+GitHub 将根据你当前使用的分支自动转换相对链接或图像路径，从而使链接或路径始终有效。 链接的路径将相对于当前文件。 以 / 开头的链接将相对于存储库根目录。 可使用所有相对链接操作数，例如 ./ 和 ../。
+
+链接文本应位于一行上。 下面的示例将不起作用。
+
+相对链接更便于用户克隆仓库。 绝对链接可能无法用于仓库的克隆 - 建议使用相对链接引用仓库中的其他文件。
