--- a/lesson2/lesson2.ipynb
+++ b/lesson2/lesson2.ipynb
@@ -31,6 +31,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4f6724df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wine 紅酒 entree 龍蝦堡 dessert 冰淇淋\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 引數值的呼叫 (依照順序)\n",
+    "menu('紅酒','龍蝦堡','冰淇淋')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e800b210",
    "metadata": {},
