--- a/lesson2/lesson2.ipynb
+++ b/lesson2/lesson2.ipynb
@@ -50,6 +50,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8eb84c61",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "menu() missing 1 required positional argument: 'dessert'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# 假如只有給兩個值(會出錯)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mmenu\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m紅酒\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m龍蝦堡\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: menu() missing 1 required positional argument: 'dessert'"
+     ]
+    }
+   ],
+   "source": [
+    "# 假如只有給兩個值(會出錯)\n",
+    "menu('紅酒','龍蝦堡')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "906bbb51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def menu(wine:str, entree:str, dessert:str) -> dict:\n",
+    "    return {\"wine\":wine,\n",
+    "           \"entree\":entree,\n",
+    "           \"dessert\":dessert}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6d6cd6ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'wine': '果汁', 'entree': '義大利麵', 'dessert': '布丁'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pk:dict = menu(\"果汁\",\"義大利麵\",\"布丁\")\n",
+    "pk"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e800b210",
    "metadata": {},
