--- a/lesson2/lesson2.ipynb
+++ b/lesson2/lesson2.ipynb
@@ -132,6 +132,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "971e0694",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'wine': '果汁', 'entree': '義大利麵', 'dessert': '布丁'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#混合呼叫\n",
+    "#前面要引數值呼叫\n",
+    "#後面引數名稱呼叫\n",
+    "#引數名稱呼叫後，全部都要引數名稱呼叫\n",
+    "pk:dict = menu('果汁',entree='義大利麵',dessert='布丁')\n",
+    "pk"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e800b210",
    "metadata": {},
