--- a/lesson2/lesson2.ipynb
+++ b/lesson2/lesson2.ipynb
@@ -164,6 +164,90 @@
    "source": [
     "### 呼叫funtion呼叫funtion"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af5207cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 參數有default value參數有default value\n",
+    "def menu(wine:str, entree:str, dessert:str='布丁') -> dict:\n",
+    "    return {\"wine\":wine,\n",
+    "           \"entree\":entree,\n",
+    "           \"dessert\":dessert}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "13a214cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'wine': '果汁', 'entree': '義大利麵', 'dessert': '布丁'}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 呼叫時有default value 可以省略\n",
+    "# 引數值呼叫\n",
+    "pk:dict = menu(\"果汁\",\"義大利麵\")\n",
+    "pk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4799c1b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'wine': '果汁', 'entree': '義大利麵', 'dessert': '果凍'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 不用預設的引數值就要自行輸入值值\n",
+    "pk:dict = menu(\"果汁\",\"義大利麵\",\"果凍\")\n",
+    "pk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4baab4f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'wine': '果汁', 'entree': '義大利麵', 'dessert': '布丁'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#引數名稱的呼叫\n",
+    "pk:dict = menu (entree=\"義大利麵\",wine=\"果汁\")\n",
+    "pk"
+   ]
   }
  ],
  "metadata": {
