--- a/lesson2/lesson2.ipynb
+++ b/lesson2/lesson2.ipynb
@@ -248,6 +248,89 @@
     "pk:dict = menu (entree=\"義大利麵\",wine=\"果汁\")\n",
     "pk"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "24ce2d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 a,b,c\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1,2,3,4,5,'a,b,c')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "12153bdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-2-3-4-5-a,b,c\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1,2,3,4,5,'a,b,c',sep='-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "15c1a541",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-2-3-4-5-a,b,c.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1,2,3,4,5,'a,b,c',sep='-',end='.\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c0e74b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-2-3-4-5-a,b,c.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#引數名稱就算更換順序也可以執行\n",
+    "print(1,2,3,4,5,'a,b,c',end='.\\n',sep='-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91a650b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(1,2,3,4,5,'a,b,c',end='......\\n',sep='-')"
+   ]
   }
  ],
  "metadata": {
