--- a/lesson2/lesson2_3.ipynb
+++ b/lesson2/lesson2_3.ipynb
@@ -125,6 +125,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "b05265b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mylist.clear()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5ee83e66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "c1df63fa",
    "metadata": {},
