--- a/lesson2/lesson2_2.ipynb
+++ b/lesson2/lesson2_2.ipynb
@@ -24,21 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "612be0e4",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "args是tuple: (1, 2, 3, 'a', 'b', 'c', True, False)\n"
+     "ename": "NameError",
+     "evalue": "name 'print_args' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#沒有限制數量的`引數值的呼叫`\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mprint_args\u001b[49m( \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m,\u001b[33m'\u001b[39m\u001b[33ma\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mb\u001b[39m\u001b[33m'\u001b[39m,\u001b[33m'\u001b[39m\u001b[33mc\u001b[39m\u001b[33m'\u001b[39m,\u001b[38;5;28;01mTrue\u001b[39;00m,\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'print_args' is not defined"
      ]
     }
    ],
    "source": [
     "#沒有限制數量的`引數值的呼叫`\n",
-    "print_args(1, 2, 3,'a','b','c',True,False)"
+    "print_args( 1, 2, 3,'a','b','c',True,False)"
    ]
   },
   {
